Clean up old files Add new base for the Almanac

--- a/AtlitsGameHub/index.html
+++ b/AtlitsGameHub/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Hello there</title>
-    </head>
-    <body>
-        <h1>Atlit's Game Hub</h1>
-        <p>
-            <ul>
-                <li><a href="games/game_one.html">Game 1</a></li>
-                <li><a href="games/game_two.html">Game 2</a></li>
-                <li><a href="games/game_three.html">Game 3</a></li>
-            </ul>
-        </p>
-        </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Atlit's Almighty Almanac</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="header-text">Atlit's Almighty Almanac</div>
+        </div>
+        <div class="content">
+            <div class="games">
+                <ul>
+                    <li class="game">
+                        <a href="games/pathfinder.html">
+                            <img src="media/img/pathfinder1e-logo.jpg" alt="Pathfinder 1E" />
+                        </a>
+                    </li>
+                    <li class="game">
+                        <a href="games/world-of-tanks.html">
+                            <img src="media/img/worldoftanks-logo.jpg" alt="World of Tanks" />
+                        </a>
+                    </li>
+                    <li class="game">
+                        <a href="games/minecraft.html">
+                            <img src="media/img/minecraft-logo.jpg" alt="Minecraft" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
