--- a/AtlitsGameHub/index.html
+++ b/AtlitsGameHub/index.html
@@ -19,7 +19,7 @@
             <div class="games">
                 <ul>
                     <li class="game">
-                        <a href="games/pathfinder.html">
+                        <a href="games/pathfinder1e.html">
                             <img src="media/img/pathfinder1e-logo.jpg" alt="Pathfinder 1E" />
                         </a>
                     </li>
