--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 
     <title>Atlit's Almighty Almanac</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-text">Atlit's Almighty Almanac</div>
+            <div class="header-title">
+                Atlit's Almighty Almanac
+            </div>
         </div>
+
         <div class="content">
             <div class="games">
                 <ul>
@@ -35,6 +38,10 @@
                     </li>
                 </ul>
             </div>
+        </div>
+
+        <div class="footer">
+            Copyright © Atlit 2023
         </div>
     </div>
 </body>
