--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -22,6 +22,9 @@
         </div>
 
         <div class="content">
+            <div class="menu-bar">
+                <div class="menu-item"><a href=../index.html>Homepage</a></div>
+            </div>
             Insert content here
         </div>
 
