Move css files Add wot information Change homepage link

--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/game.css">
 
     <title>Atlit's Almighty Almanac - World of Tanks</title>
 </head>
@@ -22,11 +23,23 @@
         </div>
 
         <div class="menu-bar">
-            <div class="menu-item"><a href=../index.html>Homepage</a></div>
+            <div class="menu-item"><a href=https://almanac.atlit.nl>Homepage</a></div>
         </div>
 
         <div class="content">
-            Insert content here
+            <div class="game-information">
+                <div class="game-information-item">
+                    <div class="information-title">Blueprint calcualation table</div>
+                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations" />
+                    <div class="information-description">
+                        This table is intended to help calculating the amount of blueprints required to reach certain
+                        tiers of tanks.
+                    </div>
+                    <div class="information-source"><a
+                            href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/">Source</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="footer">
