--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/homepage.css">
 
     <title>Atlit's Almighty Almanac</title>
 </head>
@@ -23,17 +24,17 @@
                 <ul>
                     <li class="game">
                         <a href="games/pathfinder1e.html">
-                            <img src="media/img/pathfinder1e-logo.jpg" alt="Pathfinder 1E" />
+                            <img src="media/img/gamelogo/pathfinder1e-logo.jpg" alt="Pathfinder 1E" />
                         </a>
                     </li>
                     <li class="game">
                         <a href="games/world-of-tanks.html">
-                            <img src="media/img/worldoftanks-logo.jpg" alt="World of Tanks" />
+                            <img src="media/img/gamelogo/worldoftanks-logo.jpg" alt="World of Tanks" />
                         </a>
                     </li>
                     <li class="game">
                         <a href="games/minecraft.html">
-                            <img src="media/img/minecraft-logo.jpg" alt="Minecraft" />
+                            <img src="media/img/gamelogo/minecraft-logo.jpg" alt="Minecraft" />
                         </a>
                     </li>
                 </ul>
