Make information source open in new tab

--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -35,16 +35,19 @@
                         This table is intended to help calculating the amount of blueprints required to reach certain
                         tiers of tanks.
                     </div>
-                    <div class="information-source"><a
-                            href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/">Source</a>
-                    </div>
+                    <a class="information-source"
+                        href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/"
+                        target="_blank">
+                        Source
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="footer">
-            Copyright © Atlit 2023
-        </div>
+    <div class="footer">
+        Copyright © Atlit 2023
+    </div>
     </div>
 
 </body>
