--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="../css/menu.css">
+    <link rel="stylesheet" href="../css/game-information.css">
 
     <title>Atlit's Almighty Almanac - World of Tanks</title>
 </head>
@@ -29,13 +30,29 @@
         <div class="content">
             <div class="game-information">
                 <div class="game-information-item">
-                    <div class="information-title">Blueprint calcualation table</div>
-                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations" />
-                    <div class="information-description">
+                    <div class="game-information-title">Blueprint calcualation table</div>
+                    <div class="game-information-description">
                         This table is intended to help calculating the amount of blueprints required to reach certain
                         tiers of tanks.
                     </div>
-                    <a class="information-source"
+                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations" />
+                    <a class="game-information-source"
+                        href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/"
+                        target="_blank">
+                        Source
+                    </a>
+                </div>
+            </div>
+
+            <div class="game-information">
+                <div class="game-information-item">
+                    <div class="game-information-title">Blueprint calcualation table</div>
+                    <div class="game-information-description">
+                        This table is intended to help calculating the amount of blueprints required to reach certain
+                        tiers of tanks.
+                    </div>
+                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations" />
+                    <a class="game-information-source"
                         href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/"
                         target="_blank">
                         Source
