Added pathfinder campaign information

--- a/games/pathfinder1e.html
+++ b/games/pathfinder1e.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/default.css">
     <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/game-information.css">
+    <link rel="stylesheet" href="../css/information.css">
+    <link rel="stylesheet" href="../css/pathfinder.css">
 
     <title>Atlit's Almighty Almanac - Pathfinder 1E</title>
 </head>
@@ -28,13 +29,14 @@
         </div>
 
         <div class="content">
-            <div class="game-information">
-                <div class="game-information-item">
-                    <div class="game-information-title">Homerules</div>
-                    <div class="game-information-description">
-                        During our pathfinder games we generally use the homerules. Be aware that a DM is free to apply
+            <div class="information">
+                <div class="information-item">
+                    <div class="information-title">Homerules</div>
+                    <div class="information-content">
+                        During our pathfinder games we generally use the homerules. Be aware that a Gamemaster is free
+                        to apply
                         different rules for their games!<br />
-                        <ol class="game-information-list">
+                        <ol class="information-list">
                             <li>The following classes are banned:
                                 <ul>
                                     <li>Chained Summoner</li>
@@ -46,13 +48,172 @@
                         </ol>
                     </div>
                 </div>
+                <div class="information-item">
+                    <div class="information-title">Campaigns</div>
+                    <div class="information-content">
+                        We have various ongoing campaigns.<br />
+                        All times are in the Central European timezone.
+                    </div>
+                    <div class="pf-campaigns">
+                        <div class="pf-campaign">
+                            <div class="pf-campaign-name">Curse of the Crimson Throne</div>
+                            <div class="pf-campaign-description">This campaign takes places in and around
+                                Korvosa.<br />Alternates between books with Second Darkness.
+                            </div>
+                            <table>
+                                <tr class="pf-campaign-schedule">
+                                    <th>Schedule:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Every friday at 7:30pm</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-gamemaster">
+                                    <th>Gamemaster:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Magma1Lord</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-players">
+                                    <th>Players:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Dark - Lilliana</li>
+                                            <li>Headlessphsyco - The Butcher</li>
+                                            <li>Hoob - Nerena</li>
+                                            <li>Atlit - Archie</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="pf-campaign">
+                            <div class="pf-campaign-name">Second Darkness</div>
+                            <div class="pf-campaign-description">This campaign starts off in Riddleport, however will
+                                eventually also visit the Elven homeland of Kyonin.<br />Alternates between books with
+                                Curse
+                                of the Crimson Throne.
+                            </div>
+                            <table>
+                                <tr class="pf-campaign-schedule">
+                                    <th>Schedule:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Every friday at 7:30pm</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-gamemaster">
+                                    <th>Gamemaster:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Dark</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-players">
+                                    <th>Players:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Hoob - <span class="text-striketrough">Gareth</span>, Marika</li>
+                                            <li>Headlessphsyco - Derius</li>
+                                            <li>Atlit - Tristan</li>
+                                            <li>Magma1Lord - <span class="text-striketrough">Drogash</span>, Arianne
+                                            </li>
+                                            <li>Zeboki - Rogue fella</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="pf-campaign">
+                            <div class="pf-campaign-name">Wrath of the Wrighteous</div>
+                            <div class="pf-campaign-description">This campaign revolves around the worldwound, the
+                                hero's
+                                will fight hordes of demons and other vile creatures.</div>
+                            <table>
+                                <tr class="pf-campaign-schedule">
+                                    <th>Schedule:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Every sunday at 2:00pm</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-gamemaster">
+                                    <th>Gamemaster:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Shiny
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-players">
+                                    <th>Players:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Dark - Mirza</li>
+                                            <li>SteelTofu - Lillia</li>
+                                            <li>Atlit - Stabby</li>
+                                            <li>Headlessphsyco - Crunch</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="pf-campaign">
+                            <div class="pf-campaign-name">Raiders 2</div>
+                            <div class="pf-campaign-description">This campaign is player
+                                driven and uses a one-shot
+                                mentality.
+                                This means that each session is in essence a one-shot, though all of them drive a
+                                common story.<br />
+                                It takes place on a world called Malrose, a homebrew world made by Headlessphsyco and
+                                Dark.
+                            </div>
+                            <table>
+                                <tr class="pf-campaign-schedule">
+                                    <th>Schedule:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Every sunday at 2:00pm</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-gamemaster">
+                                    <th>Gamemaster:</th>
+                                    <td>
+                                        <ul>
+                                            <li>Headlessphsyco</li>
+                                            <li>Magma1Lord</li>
+                                            <li>Dark</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr class="pf-campaign-players">
+                                    <th>Players:</th>
+                                    <td>
+                                        <ul>
+                                            <li>
+                                                Due to the nature
+                                                of this campaign, this varies
+                                                per session.
+                                            </li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer">
+                Copyright © Atlit 2023
             </div>
         </div>
-
-        <div class="footer">
-            Copyright © Atlit 2023
-        </div>
-    </div>
 </body>
 
 </html>
