Correct characters for player

--- a/games/pathfinder1e.html
+++ b/games/pathfinder1e.html
@@ -82,7 +82,7 @@
                                     <td>
                                         <ul>
                                             <li>Dark - Lilliana</li>
-                                            <li>Headlessphsyco - The Butcher</li>
+                                            <li>Headlessphsyco - The Butcher, Lucia</li>
                                             <li>Hoob - Nerena</li>
                                             <li>Atlit - Archie</li>
                                         </ul>
