Fix raiders2 description and schedule

--- a/games/pathfinder1e.html
+++ b/games/pathfinder1e.html
@@ -165,20 +165,23 @@
                         </div>
                         <div class="pf-campaign">
                             <div class="pf-campaign-name">Raiders 2</div>
-                            <div class="pf-campaign-description">This campaign is player
-                                driven and uses a one-shot
-                                mentality.
-                                This means that each session is in essence a one-shot, though all of them drive a
-                                common story.<br />
-                                It takes place on a world called Malrose, a homebrew world made by Headlessphsyco and
-                                Dark.
+                            <div class="pf-campaign-description">
+                                This campaign takes place on a world called Malrose, a homebrew world made by
+                                Headlessphsyco and
+                                Dark.<br />
+                                <br />
+                                It is a player-driven campaign and uses a one-shot
+                                mentality. As such there aren't regular session and players can suggest sessions to the
+                                gamemasters.
+                                It also means that each session is in essence a one-shot, though all of them drive a
+                                common story.
                             </div>
                             <table>
                                 <tr class="pf-campaign-schedule">
                                     <th>Schedule:</th>
                                     <td>
                                         <ul>
-                                            <li>Every sunday at 2:00pm</li>
+                                            <li>See above</li>
                                         </ul>
                                     </td>
                                 </tr>
