Fix player character name

--- a/games/pathfinder1e.html
+++ b/games/pathfinder1e.html
@@ -121,7 +121,7 @@
                                             <li>Hoob - <span class="text-striketrough">Gareth</span>, Marika</li>
                                             <li>Headlessphsyco - Derius</li>
                                             <li>Atlit - Tristan</li>
-                                            <li>Magma1Lord - <span class="text-striketrough">Drogash</span>, Arianne
+                                            <li>Magma1Lord - <span class="text-striketrough">Drogash</span>, Ariane
                                             </li>
                                             <li>Zeboki - Rogue fella</li>
                                         </ul>
