Fix formatting errors

--- a/games/pathfinder1e.html
+++ b/games/pathfinder1e.html
@@ -35,14 +35,14 @@
                     <div class="information-content">
                         During our pathfinder games we generally use the homerules. Be aware that a Gamemaster is free
                         to apply
-                        different rules for their games!<br />
+                        different rules for their games!<br>
                         <ol class="information-list">
                             <li>The following classes are banned:
                                 <ul>
                                     <li>Chained Summoner</li>
                                 </ul>
                             </li>
-                            <li>Unchained skills are available for all classes, with the exception of Intimidate.<br />
+                            <li>Unchained skills are available for all classes, with the exception of Intimidate.<br>
                                 To compensate for this, unchained rogues receive Skill Focus as a bonus skill when they
                                 would normally gain Rogue's Edge.</li>
                         </ol>
@@ -51,14 +51,14 @@
                 <div class="information-item">
                     <div class="information-title">Campaigns</div>
                     <div class="information-content">
-                        We have various ongoing campaigns.<br />
+                        We have various ongoing campaigns.<br>
                         All times are in the Central European timezone.
                     </div>
                     <div class="pf-campaigns">
                         <div class="pf-campaign">
                             <div class="pf-campaign-name">Curse of the Crimson Throne</div>
                             <div class="pf-campaign-description">This campaign takes places in and around
-                                Korvosa.<br />Alternates between books with Second Darkness.
+                                Korvosa.<br>Alternates between books with Second Darkness.
                             </div>
                             <table>
                                 <tr class="pf-campaign-schedule">
@@ -93,7 +93,7 @@
                         <div class="pf-campaign">
                             <div class="pf-campaign-name">Second Darkness</div>
                             <div class="pf-campaign-description">This campaign starts off in Riddleport, however will
-                                eventually also visit the Elven homeland of Kyonin.<br />Alternates between books with
+                                eventually also visit the Elven homeland of Kyonin.<br>Alternates between books with
                                 Curse
                                 of the Crimson Throne.
                             </div>
@@ -147,7 +147,8 @@
                                     <th>Gamemaster:</th>
                                     <td>
                                         <ul>
-                                            <li>Shiny
+                                            <li>Shiny</li>
+                                        </ul>
                                     </td>
                                 </tr>
                                 <tr class="pf-campaign-players">
@@ -168,8 +169,8 @@
                             <div class="pf-campaign-description">
                                 This campaign takes place on a world called Malrose, a homebrew world made by
                                 Headlessphsyco and
-                                Dark.<br />
-                                <br />
+                                Dark.<br>
+                                <br>
                                 It is a player-driven campaign and uses a one-shot
                                 mentality. As such there aren't regular session and players can suggest sessions to the
                                 gamemasters.
@@ -212,11 +213,12 @@
                     </div>
                 </div>
             </div>
-
-            <div class="footer">
-                Copyright © Atlit 2023
-            </div>
         </div>
+
+        <div class="footer">
+            Copyright © Atlit 2023
+        </div>
+    </div>
 </body>
 
 </html>
