Fix more formatting errors

--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -35,7 +35,7 @@
                         This table is intended to help calculating the amount of blueprints required to reach certain
                         tiers of tanks.
                     </div>
-                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations" />
+                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations">
                     <a class="information-source"
                         href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/"
                         target="_blank">
