--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <ul>
                     <li class="game">
                         <a href="games/pathfinder1e.html">
-                            <img src="media/img/gamelogo/pathfinder1e-logo.jpg" alt="Pathfinder 1E" />
+                            <img src="media/img/gamelogo/pathfinder1e-logo.jpg" alt="Pathfinder 1E">
                         </a>
                     </li>
                     <li class="game">
                         <a href="games/world-of-tanks.html">
-                            <img src="media/img/gamelogo/worldoftanks-logo.jpg" alt="World of Tanks" />
+                            <img src="media/img/gamelogo/worldoftanks-logo.jpg" alt="World of Tanks">
                         </a>
                     </li>
                     <li class="game">
                         <a href="games/minecraft.html">
-                            <img src="media/img/gamelogo/minecraft-logo.jpg" alt="Minecraft" />
+                            <img src="media/img/gamelogo/minecraft-logo.jpg" alt="Minecraft">
                         </a>
                     </li>
                 </ul>
