Add homebrew page Change menu-bar clickable area

--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -24,7 +24,9 @@
         </div>
 
         <div class="menu-bar">
-            <div class="menu-item"><a href=https://almanac.atlit.nl>Homepage</a></div>
+            <a href=https://almanac.atlit.nl>
+                <div class="menu-item">Homepage</div>
+            </a>
         </div>
 
         <div class="content">
