--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/information.css">
+    <link rel="stylesheet" type="text/css" href="../../css/default.css">
+    <link rel="stylesheet" type="text/css" href="../../css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../css/information.css">
+    <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
-    <title>Atlit's Almighty Almanac - World of Tanks</title>
+    <title>Atlit's Almighty Almanac - Pathfinder 1E</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
                 Atlit's Almighty Almanac
             </div>
             <div class="header-subtitle">
-                World of Tanks
+                Pathfinder 1E
             </div>
         </div>
 
@@ -27,22 +28,26 @@
             <a href=https://almanac.atlit.nl>
                 <div class="menu-item">Homepage</div>
             </a>
+            <a href="pathfinder1e.html">
+                <div class="menu-item">Pathfinder 1E</div>
+            </a>
+            <div class="menu-item current-page">Homebrew</div>
         </div>
 
         <div class="content">
             <div class="information">
                 <div class="information-item">
-                    <div class="information-title">Blueprint calcualation table</div>
+                    <div class="information-title">Trox Drone</div>
                     <div class="information-content">
-                        This table is intended to help calculating the amount of blueprints required to reach certain
-                        tiers of tanks.
+                        Insert content
                     </div>
-                    <img src="../media/img/info/wot-blueprints.png" alt="An image containing blueprint calculations">
-                    <a class="information-source"
-                        href="http://forum.worldoftanks.asia/index.php?/topic/85964-tech-tree-blueprint-cost-table/"
-                        target="_blank">
-                        Source
-                    </a>
+                </div>
+
+                <div class="information-item">
+                    <div class="information-title">Trox Drone</div>
+                    <div class="information-content">
+                        Insert content
+                    </div>
                 </div>
             </div>
         </div>
