--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/information.css">
-    <link rel="stylesheet" href="../css/pathfinder.css">
+    <link rel="stylesheet" type="text/css" href="../../css/default.css">
+    <link rel="stylesheet" type="text/css" href="../../css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../css/information.css">
+    <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
     <title>Atlit's Almighty Almanac - Pathfinder 1E</title>
 </head>
@@ -25,7 +25,13 @@
         </div>
 
         <div class="menu-bar">
-            <div class="menu-item"><a href=https://almanac.atlit.nl>Homepage</a></div>
+            <a href=https://almanac.atlit.nl>
+                <div class="menu-item">Homepage</div>
+            </a>
+            <div class="menu-item current-page">Pathfinder 1E</div>
+            <a href=homebrew.html>
+                <div class="menu-item">Homebrew</div>
+            </a>
         </div>
 
         <div class="content">
@@ -42,9 +48,17 @@
                                     <li>Chained Summoner</li>
                                 </ul>
                             </li>
-                            <li>Unchained skills are available for all classes, with the exception of Intimidate.<br>
+                            <li>Unchained skills are available for all classes, with the exception of Intimidate.
+                                The rank requirement remains unchanged.<br>
                                 To compensate for this, unchained rogues receive Skill Focus as a bonus skill when they
-                                would normally gain Rogue's Edge.</li>
+                                would normally gain Rogue's Edge.
+                            </li>
+                            <li>
+                                You can open doors as part of a move action.
+                            </li>
+                            <li>
+                                Paladin and anti-paladin can take any good or any evil respectively.
+                            </li>
                         </ol>
                     </div>
                 </div>
