Add homebrew race formatting

--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -39,16 +39,132 @@
                 <div class="information-item">
                     <div class="information-title">Trox Drone</div>
                     <div class="information-content">
+                        A lesser variant of the Trox but still formidable in battle.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+4 Strength, -2 Intelligence, -2 Wisdom, -2 Charisma<br>Trox are very strong,
+                                        but they can be dim, unreceptive, and inhospitable</td>
+                                </tr>
+                                <tr>
+                                    <th>Type</th>
+                                    <td><span class="text-bold">Monstrous Humanoid</span><br>
+                                        Trox are monstrous humanoids</td>
+                                </tr>
+                                <tr>
+                                    <th>Speed</th>
+                                    <td><span class="text-bold">Normal speed</span><br>
+                                        Trox have a base speed of 30 feet</td>
+                                </tr>
+                                <tr>
+                                    <th>Size</th>
+                                    <td><span class="text-bold">Medium</span><br>
+                                        Trox are medium size</td>
+                                </tr>
+                                <tr>
+                                    <th>Senses</th>
+                                    <td>
+                                        <div><span class="text-bold">Darkvision</span><br>
+                                            Trox can see in the dark up to 60 feet
+                                        </div>
+                                        <div><span class="text-bold">Tremorsense</span><br>
+                                            Trox have developed a closeness to the earth that helps them thwart the
+                                            invisibility of
+                                            their duergar enemies. They gain tremorsense to a range of 20 feet.</div>
+                                        <div><span class="text-bold">Light Blindness</span><br>
+                                            Abrupt exposure to bright light blinds Trox for 1 round; on subsequent
+                                            rounds, they are
+                                            dazzled as long as they remain in the affected area.</div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Special movement</th>
+                                    <td><span class="text-bold">Burrow</span><br>
+                                        Trox have a burrow speed of 20 feet</td>
+                                </tr>
+                                <tr>
+                                    <th>Special abilities</th>
+                                    <td><span class="text-bold">Grabbing Apendages</span></br>
+                                        A trox's smaller arms are useful for little more than aiding it with grappling.
+                                        Trox gain a +2 bonus on cmb and cmd vs Grapple</td>
+                                </tr>
+                                <tr>
+                                    <th>Languages</th>
+                                    <td>Trox begin play speaking Terran<br>
+                                        A trox with a high Intelligence score can choose from the following: Common,
+                                        Dwarven, Giant, Orc, and Undercommon</td>
+                                </tr>
+                            </table>
+
+                            <div class="information-subtitle">Alternate racial traits</div>
+                            <table>
+                                <tr>
+                                    <th>Desert Brood</th>
+                                    <td>To escape the threat of Drukir these Trox have adapted to the sun and surviving
+                                        on the surface above. This trait replaces Burrow and Light Blindness.</td>
+                                </tr>
+                            </table>
+
+                            <div class="information-subtitle">Favoured class bonus</div>
+                            <table>
+                                <tr>
+                                    <th>Barbarian</th>
+                                    <td>+1 to the barbarian's total number of rage rounds per day</td>
+                                </tr>
+                                <tr>
+                                    <th>Fighter</th>
+                                    <td>Add +1 to the fighter's CMD when resisting two combat maneuvers of the
+                                        character's choice.</td>
+                                </tr>
+                                <tr>
+                                    <th>Alchemist</th>
+                                    <td>Add +10 minutes to the duration of the alchemist's mutagens.</td>
+                                </tr>
+                                <tr>
+                                    <th>Shifter</th>
+                                    <td>Add 1/5 to the damage dealt when using the shifter claws ability.</td>
+                                </tr>
+                                <tr>
+                                    <th>Druid</th>
+                                    <td>Add +1/3 to the druid's natural armor bonus when using wild shape.</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="information-item">
+                    <div class="information-title">The Lizardfolk</div>
+                    <div class="information-content">
                         Insert content
                     </div>
                 </div>
 
                 <div class="information-item">
-                    <div class="information-title">Trox Drone</div>
+                    <div class="information-title">The Gnoll</div>
                     <div class="information-content">
                         Insert content
                     </div>
                 </div>
+
+                <div class="information-item">
+                    <div class="information-title">The Kobold</div>
+                    <div class="information-content">
+                        The kobold has very weak ability scores, so we've decided to change them.<br>
+                        Kobolds are fast and crafty<br>
+                        Kobold Ability Score Change: -2 Strength, +2 Dexterity, +2 Wisdom
+                        but weak.
+                    </div>
+                </div>
+
+                <div class="information-item">
+                    <div class="information-title">The Skinwalker</div>
+                    <div class="information-content">
+                        Insert content
+                    </div>
+                </div>
+
             </div>
         </div>
 
